# crud_streamlit

./: README.md  pyproject.toml
app/api/controller/: controller.py
app/api/db/: database.py
app/api/models/: product.py
app/api/schemas/: schemas.py
src/backend/: main.py
src/backend/controller/: controller.py
src/backend/db/: database.py
src/backend/models/: models.py
src/backend/router/: router.py
src/backend/schemas/: schemas.py
